Changed height of horizontal scrollabel elements to be as the container to avoid floating inside the conatiner

--- a/src/app/components/shopping-nav/shopping-nav.component.css
+++ b/src/app/components/shopping-nav/shopping-nav.component.css
@@ -8,7 +8,7 @@ html, body {height:100%;overflow:auto}
 
 
 .cdk-virtual-scroll-data-product-type .cdk-viewport {
-  height: 30px;
+  height: 35px;
   background-color: white;
   width: 350px;
   font-size: 12px;
@@ -18,16 +18,19 @@ html, body {height:100%;overflow:auto}
   display: flex;
   flex-direction: row;
   text-align: center;
+  height: 35px;
 }
 
 .cdk-virtual-scroll-data-product-type .scroll-item {
   width: 100px;
   font-family: FontAwesome, 'Maven Pro', sans-serif;
   font-weight: 200;
+  height: 35px;
 }
 
 .cdk-virtual-scroll-data-product-type .scroll-item-checked {
   width: 100px;
+  height: 35px;
   font-weight: bold;
   font-family: FontAwesome, 'Maven Pro', sans-serif;
 }
@@ -128,9 +131,8 @@ img.search-img{
 
 
 .anim{
-  /* right: 0;
-  position: absolute;  */
-  float: right;
+  right: 0;
+  position: absolute; 
   z-index: 1;
   overflow: auto;
   height: 100%;
